# ecom-cs-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  models.py  tool_schema.py
app/exporters/: llamafactory.py  training_data.py
app/knowledge_base/: logistics.json  orders.json  policies.json  products.json
app/services/: answer.py  baseline_benchmark.py  evaluator.py  internal_tools.py  model_io.py  model_orchestrator.py  orchestrator.py  router.py  seed_synthesis.py
docs/: AutoDL工作流.md  CLI说明.md  LLaMA-Factory导出说明.md  Trace工作流.md  architecture.md  autodl_workflow.md  beginner_training_guide.md  cli_spec.md  data_synthesis_pipeline.md  dataset_blueprint.md  experiment_log.md  llamafactory_export.md  project_guide.md  training_plan.md  实验记录.md  数据合成流水线.md  数据策略.md  数据规范.md  数据集蓝图.md  新手训练指南.md  训练计划.md  路线图.md  项目导读.md
tests/: test_model_io.py  test_model_orchestrator.py
training/: build_synthetic_datasets.sh
training/autodl/: prepare_llamafactory_data.sh  run_answer_benchmark.sh  run_model_demo.sh  run_router_benchmark.sh  serve_vllm_lora.sh  train_answer_lora.sh  train_router_lora.sh
training/datasets/: answer_benchmark.qwen3_4b.dev.json  answer_sft.dev.generated.jsonl  answer_sft.dev.lf.json  answer_sft.dev.mixed.generated.jsonl  answer_sft.dev.mixed.lf.json  answer_sft.generated.jsonl  answer_sft.train.lf.json  answer_sft.train.mixed.generated.jsonl  answer_sft.train.mixed.lf.json  answer_train.sample.jsonl  dataset_info.ecom_cs_answer_sft.json  dataset_info.ecom_cs_answer_sft.mixed.json  (+41 more)
